// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Login screen snapshot tests should render screen 1`] = `
<div
  className="sc-bcXHqe MuiBox-root css-w3ze74"
>
  <div
    className="sc-gswNZR litGAJ MuiBox-root css-od2y5g"
  >
    <div
      className="sc-dkrFOg MuiBox-root css-uudpsy"
    >
      <img
        src="login-pattern-us.svg"
      />
      <img
        src="login-pattern-ue.svg"
      />
    </div>
    <div
      className="sc-eDvSVe MuiBox-root css-1vp8jwk"
    >
      <img
        alt="Super Monitoria"
        src="login-logo.svg"
      />
    </div>
    <div
      className="sc-hLBbgP MuiBox-root css-7dckhh"
    >
      <img
        src="login-pattern-bs.svg"
      />
      <img
        src="login-pattern-be.svg"
      />
    </div>
  </div>
  <div
    className="sc-ksBlkl mZXWo MuiBox-root css-od2y5g"
  >
    <div
      className="sc-hBxehG CkfHZ MuiBox-root css-150kay2"
    >
      <div
        className="sc-bjfHbI cVXfbz MuiBox-root css-0"
      >
        <img
          src="header-logo.svg"
        />
      </div>
      <div
        className="sc-fnGiBr MuiBox-root css-u4p24i"
      >
        <div
          className="sc-fEXmlR ktuAEL MuiBox-root css-1ay9vb9"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-h4jzzx-MuiTypography-root"
          >
            Não é cadastrado?
          </p>
        </div>
        <button
          className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv iLerhy css-18fs5t5-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
          disabled={false}
          id="login-register-button"
          onBlur={[Function]}
          onClick={[MockFunction]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Cadastre-se
        </button>
      </div>
    </div>
    <div
      className="sc-idXgbr MuiBox-root css-wkpw2c"
    >
      <div
        className="sc-pyfCe MuiBox-root css-1b6n4o1"
      >
        <div
          className="sc-jrcTuL MuiBox-root css-wkpw2c"
        >
          <h3
            className="MuiTypography-root MuiTypography-h3 ForwardRef(Typography)-root-1 css-ses0wv-MuiTypography-root"
          >
            Faça seu login
          </h3>
          <p
            className="MuiTypography-root MuiTypography-body1 ForwardRef(Typography)-root-2 css-h4jzzx-MuiTypography-root"
          >
            Insira suas credenciais abaixo para continuar
          </p>
          <form
            className="sc-kDvujY kpgBAx"
            id="login-form"
            onSubmit={[MockFunction]}
          >
            <div
              className="MuiBox-root css-8atqhb"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart sc-ftTHYK beuLgP css-1xv2y7e-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PersonOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-1o9s3wi-MuiInputBase-input-MuiOutlinedInput-input"
                  id="email"
                  name="email"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="E-mail IComp"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="MuiBox-root css-8875ym"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd sc-ftTHYK beuLgP css-1l7of66-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="VpnKeyOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22 19h-6v-4h-2.68c-1.14 2.42-3.6 4-6.32 4-3.86 0-7-3.14-7-7s3.14-7 7-7c2.72 0 5.17 1.58 6.32 4H24v6h-2v4zm-4-2h2v-4h2v-2H11.94l-.23-.67C11.01 8.34 9.11 7 7 7c-2.76 0-5 2.24-5 5s2.24 5 5 5c2.11 0 4.01-1.34 4.71-3.33l.23-.67H18v4zM7 15c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-152mnda-MuiInputBase-input-MuiOutlinedInput-input"
                  id="password"
                  name="password"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Senha"
                  type="password"
                  value=""
                />
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1jew56n-MuiButtonBase-root-MuiIconButton-root"
                    disabled={false}
                    id="login-show-password-icon-button"
                    onBlur={[Function]}
                    onClick={[MockFunction]}
                    onContextMenu={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                      />
                    </svg>
                  </button>
                </div>
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="sc-ipEyDJ kLWMPZ MuiBox-root css-mwwja"
            >
              <a
                className="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover sc-eDWCr css-tbtf8t-MuiTypography-root-MuiLink-root"
                href="/register"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                Esqueci minha senha
              </a>
              <button
                className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv sc-csuSiG fzJIXo iqjFsB css-105755-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                disabled={false}
                id=":r1:"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="submit"
              >
                Entrar
              </button>
            </div>
          </form>
        </div>
        <div
          className="sc-bqWxrE MuiBox-root css-1tqrsn5"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-5fhr9f-MuiTypography-root"
          >
            Ainda não tem uma conta? 
          </p>
          <a
            className=""
            href="/register"
            onClick={[Function]}
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1i4c8mu-MuiTypography-root"
            >
              Cadastre-se
            </p>
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-jSUZER LHjhY MuiBox-root css-12huqwv"
    >
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-be-small.svg"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter css-o16dbi-MuiTypography-root"
      >
        Super Monitoria©. 
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1cghntr-MuiTypography-root-MuiLink-root"
          href="https://mui.com/"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          Todos os Direitos Reservados
        </a>
         
        2022
        .
      </span>
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-bs-small.svg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Login screen snapshot tests should render screen with invalid e-mail 1`] = `
<div
  className="sc-bcXHqe MuiBox-root css-w3ze74"
>
  <div
    className="sc-gswNZR litGAJ MuiBox-root css-od2y5g"
  >
    <div
      className="sc-dkrFOg MuiBox-root css-uudpsy"
    >
      <img
        src="login-pattern-us.svg"
      />
      <img
        src="login-pattern-ue.svg"
      />
    </div>
    <div
      className="sc-eDvSVe MuiBox-root css-1vp8jwk"
    >
      <img
        alt="Super Monitoria"
        src="login-logo.svg"
      />
    </div>
    <div
      className="sc-hLBbgP MuiBox-root css-7dckhh"
    >
      <img
        src="login-pattern-bs.svg"
      />
      <img
        src="login-pattern-be.svg"
      />
    </div>
  </div>
  <div
    className="sc-ksBlkl mZXWo MuiBox-root css-od2y5g"
  >
    <div
      className="sc-hBxehG CkfHZ MuiBox-root css-150kay2"
    >
      <div
        className="sc-bjfHbI cVXfbz MuiBox-root css-0"
      >
        <img
          src="header-logo.svg"
        />
      </div>
      <div
        className="sc-fnGiBr MuiBox-root css-u4p24i"
      >
        <div
          className="sc-fEXmlR ktuAEL MuiBox-root css-1ay9vb9"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-h4jzzx-MuiTypography-root"
          >
            Não é cadastrado?
          </p>
        </div>
        <button
          className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv iLerhy css-18fs5t5-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
          disabled={false}
          id="login-register-button"
          onBlur={[Function]}
          onClick={[MockFunction]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Cadastre-se
        </button>
      </div>
    </div>
    <div
      className="sc-idXgbr MuiBox-root css-wkpw2c"
    >
      <div
        className="sc-pyfCe MuiBox-root css-1b6n4o1"
      >
        <div
          className="sc-jrcTuL MuiBox-root css-wkpw2c"
        >
          <h3
            className="MuiTypography-root MuiTypography-h3 ForwardRef(Typography)-root-1 css-ses0wv-MuiTypography-root"
          >
            Faça seu login
          </h3>
          <p
            className="MuiTypography-root MuiTypography-body1 ForwardRef(Typography)-root-2 css-h4jzzx-MuiTypography-root"
          >
            Insira suas credenciais abaixo para continuar
          </p>
          <form
            className="sc-kDvujY kpgBAx"
            id="login-form"
            onSubmit={[MockFunction]}
          >
            <div
              className="MuiBox-root css-8atqhb"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedStart sc-ftTHYK beuLgP css-1xv2y7e-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PersonIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={true}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-1o9s3wi-MuiInputBase-input-MuiOutlinedInput-input"
                  id="email"
                  name="email"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="E-mail IComp"
                  type="text"
                  value="invalid"
                />
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                className="MuiFormHelperText-root Mui-error css-9loanp-MuiFormHelperText-root"
              >
                E-mail inválido.
              </p>
            </div>
            <div
              className="MuiBox-root css-8875ym"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd sc-ftTHYK beuLgP css-1l7of66-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="VpnKeyOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22 19h-6v-4h-2.68c-1.14 2.42-3.6 4-6.32 4-3.86 0-7-3.14-7-7s3.14-7 7-7c2.72 0 5.17 1.58 6.32 4H24v6h-2v4zm-4-2h2v-4h2v-2H11.94l-.23-.67C11.01 8.34 9.11 7 7 7c-2.76 0-5 2.24-5 5s2.24 5 5 5c2.11 0 4.01-1.34 4.71-3.33l.23-.67H18v4zM7 15c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-152mnda-MuiInputBase-input-MuiOutlinedInput-input"
                  id="password"
                  name="password"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Senha"
                  type="password"
                  value=""
                />
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1jew56n-MuiButtonBase-root-MuiIconButton-root"
                    disabled={false}
                    id="login-show-password-icon-button"
                    onBlur={[Function]}
                    onClick={[MockFunction]}
                    onContextMenu={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                      />
                    </svg>
                  </button>
                </div>
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="sc-ipEyDJ kLWMPZ MuiBox-root css-mwwja"
            >
              <a
                className="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover sc-eDWCr css-tbtf8t-MuiTypography-root-MuiLink-root"
                href="/register"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                Esqueci minha senha
              </a>
              <button
                className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv sc-csuSiG fzJIXo iqjFsB css-105755-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                disabled={false}
                id=":r5:"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="submit"
              >
                Entrar
              </button>
            </div>
          </form>
        </div>
        <div
          className="sc-bqWxrE MuiBox-root css-1tqrsn5"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-5fhr9f-MuiTypography-root"
          >
            Ainda não tem uma conta? 
          </p>
          <a
            className=""
            href="/register"
            onClick={[Function]}
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1i4c8mu-MuiTypography-root"
            >
              Cadastre-se
            </p>
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-jSUZER LHjhY MuiBox-root css-12huqwv"
    >
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-be-small.svg"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter css-o16dbi-MuiTypography-root"
      >
        Super Monitoria©. 
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1cghntr-MuiTypography-root-MuiLink-root"
          href="https://mui.com/"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          Todos os Direitos Reservados
        </a>
         
        2022
        .
      </span>
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-bs-small.svg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Login screen snapshot tests should render screen with invalid login 1`] = `
<div
  className="sc-bcXHqe MuiBox-root css-w3ze74"
>
  <div
    className="sc-gswNZR litGAJ MuiBox-root css-od2y5g"
  >
    <div
      className="sc-dkrFOg MuiBox-root css-uudpsy"
    >
      <img
        src="login-pattern-us.svg"
      />
      <img
        src="login-pattern-ue.svg"
      />
    </div>
    <div
      className="sc-eDvSVe MuiBox-root css-1vp8jwk"
    >
      <img
        alt="Super Monitoria"
        src="login-logo.svg"
      />
    </div>
    <div
      className="sc-hLBbgP MuiBox-root css-7dckhh"
    >
      <img
        src="login-pattern-bs.svg"
      />
      <img
        src="login-pattern-be.svg"
      />
    </div>
  </div>
  <div
    className="sc-ksBlkl mZXWo MuiBox-root css-od2y5g"
  >
    <div
      className="sc-hBxehG CkfHZ MuiBox-root css-150kay2"
    >
      <div
        className="sc-bjfHbI cVXfbz MuiBox-root css-0"
      >
        <img
          src="header-logo.svg"
        />
      </div>
      <div
        className="sc-fnGiBr MuiBox-root css-u4p24i"
      >
        <div
          className="sc-fEXmlR ktuAEL MuiBox-root css-1ay9vb9"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-h4jzzx-MuiTypography-root"
          >
            Não é cadastrado?
          </p>
        </div>
        <button
          className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv iLerhy css-18fs5t5-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
          disabled={false}
          id="login-register-button"
          onBlur={[Function]}
          onClick={[MockFunction]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Cadastre-se
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      className="sc-idXgbr MuiBox-root css-wkpw2c"
    >
      <div
        className="sc-pyfCe MuiBox-root css-1b6n4o1"
      >
        <div
          className="sc-jrcTuL MuiBox-root css-wkpw2c"
        >
          <h3
            className="MuiTypography-root MuiTypography-h3 ForwardRef(Typography)-root-1 css-ses0wv-MuiTypography-root"
          >
            Faça seu login
          </h3>
          <p
            className="MuiTypography-root MuiTypography-body1 ForwardRef(Typography)-root-2 css-h4jzzx-MuiTypography-root"
          >
            Insira suas credenciais abaixo para continuar
          </p>
          <form
            className="sc-kDvujY kpgBAx"
            id="login-form"
            onSubmit={[MockFunction]}
          >
            <div
              className="MuiBox-root css-8atqhb"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedStart sc-ftTHYK beuLgP css-1xv2y7e-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PersonIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={true}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-1o9s3wi-MuiInputBase-input-MuiOutlinedInput-input"
                  id="email"
                  name="email"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="E-mail IComp"
                  type="text"
                  value="email@icomp.ufam.edu.br"
                />
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="MuiBox-root css-8875ym"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedStart MuiInputBase-adornedEnd sc-ftTHYK beuLgP css-1l7of66-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="VpnKeyIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12.65 10C11.83 7.67 9.61 6 7 6c-3.31 0-6 2.69-6 6s2.69 6 6 6c2.61 0 4.83-1.67 5.65-4H17v4h4v-4h2v-4H12.65zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={true}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-152mnda-MuiInputBase-input-MuiOutlinedInput-input"
                  id="password"
                  name="password"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Senha"
                  type="password"
                  value="12345678"
                />
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1jew56n-MuiButtonBase-root-MuiIconButton-root"
                    disabled={false}
                    id="login-show-password-icon-button"
                    onBlur={[Function]}
                    onClick={[MockFunction]}
                    onContextMenu={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                      />
                    </svg>
                    <span
                      className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="sc-ipEyDJ kLWMPZ MuiBox-root css-mwwja"
            >
              <a
                className="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover sc-eDWCr css-tbtf8t-MuiTypography-root-MuiLink-root"
                href="/register"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                Esqueci minha senha
              </a>
              <button
                className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv sc-csuSiG fzJIXo iqjFsB css-105755-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                disabled={false}
                id=":rb:"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="submit"
              >
                Entrar
                <span
                  className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </form>
        </div>
        <div
          className="sc-bqWxrE MuiBox-root css-1tqrsn5"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-5fhr9f-MuiTypography-root"
          >
            Ainda não tem uma conta? 
          </p>
          <a
            className=""
            href="/register"
            onClick={[Function]}
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1i4c8mu-MuiTypography-root"
            >
              Cadastre-se
            </p>
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-jSUZER LHjhY MuiBox-root css-12huqwv"
    >
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-be-small.svg"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter css-o16dbi-MuiTypography-root"
      >
        Super Monitoria©. 
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1cghntr-MuiTypography-root-MuiLink-root"
          href="https://mui.com/"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          Todos os Direitos Reservados
        </a>
         
        2022
        .
      </span>
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-bs-small.svg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Login screen snapshot tests should render screen with invalid password 1`] = `
<div
  className="sc-bcXHqe MuiBox-root css-w3ze74"
>
  <div
    className="sc-gswNZR litGAJ MuiBox-root css-od2y5g"
  >
    <div
      className="sc-dkrFOg MuiBox-root css-uudpsy"
    >
      <img
        src="login-pattern-us.svg"
      />
      <img
        src="login-pattern-ue.svg"
      />
    </div>
    <div
      className="sc-eDvSVe MuiBox-root css-1vp8jwk"
    >
      <img
        alt="Super Monitoria"
        src="login-logo.svg"
      />
    </div>
    <div
      className="sc-hLBbgP MuiBox-root css-7dckhh"
    >
      <img
        src="login-pattern-bs.svg"
      />
      <img
        src="login-pattern-be.svg"
      />
    </div>
  </div>
  <div
    className="sc-ksBlkl mZXWo MuiBox-root css-od2y5g"
  >
    <div
      className="sc-hBxehG CkfHZ MuiBox-root css-150kay2"
    >
      <div
        className="sc-bjfHbI cVXfbz MuiBox-root css-0"
      >
        <img
          src="header-logo.svg"
        />
      </div>
      <div
        className="sc-fnGiBr MuiBox-root css-u4p24i"
      >
        <div
          className="sc-fEXmlR ktuAEL MuiBox-root css-1ay9vb9"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-h4jzzx-MuiTypography-root"
          >
            Não é cadastrado?
          </p>
        </div>
        <button
          className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv iLerhy css-18fs5t5-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
          disabled={false}
          id="login-register-button"
          onBlur={[Function]}
          onClick={[MockFunction]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Cadastre-se
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      className="sc-idXgbr MuiBox-root css-wkpw2c"
    >
      <div
        className="sc-pyfCe MuiBox-root css-1b6n4o1"
      >
        <div
          className="sc-jrcTuL MuiBox-root css-wkpw2c"
        >
          <h3
            className="MuiTypography-root MuiTypography-h3 ForwardRef(Typography)-root-1 css-ses0wv-MuiTypography-root"
          >
            Faça seu login
          </h3>
          <p
            className="MuiTypography-root MuiTypography-body1 ForwardRef(Typography)-root-2 css-h4jzzx-MuiTypography-root"
          >
            Insira suas credenciais abaixo para continuar
          </p>
          <form
            className="sc-kDvujY kpgBAx"
            id="login-form"
            onSubmit={[MockFunction]}
          >
            <div
              className="MuiBox-root css-8atqhb"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart sc-ftTHYK beuLgP css-1xv2y7e-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PersonOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-1o9s3wi-MuiInputBase-input-MuiOutlinedInput-input"
                  id="email"
                  name="email"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="E-mail IComp"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="MuiBox-root css-8875ym"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedStart MuiInputBase-adornedEnd sc-ftTHYK beuLgP css-1l7of66-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="VpnKeyOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M22 19h-6v-4h-2.68c-1.14 2.42-3.6 4-6.32 4-3.86 0-7-3.14-7-7s3.14-7 7-7c2.72 0 5.17 1.58 6.32 4H24v6h-2v4zm-4-2h2v-4h2v-2H11.94l-.23-.67C11.01 8.34 9.11 7 7 7c-2.76 0-5 2.24-5 5s2.24 5 5 5c2.11 0 4.01-1.34 4.71-3.33l.23-.67H18v4zM7 15c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={true}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-152mnda-MuiInputBase-input-MuiOutlinedInput-input"
                  id="password"
                  name="password"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Senha"
                  type="password"
                  value=""
                />
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1jew56n-MuiButtonBase-root-MuiIconButton-root"
                    disabled={false}
                    id="login-show-password-icon-button"
                    onBlur={[Function]}
                    onClick={[MockFunction]}
                    onContextMenu={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                      />
                    </svg>
                    <span
                      className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                className="MuiFormHelperText-root Mui-error css-9loanp-MuiFormHelperText-root"
              >
                Informe uma senha.
              </p>
            </div>
            <div
              className="sc-ipEyDJ kLWMPZ MuiBox-root css-mwwja"
            >
              <a
                className="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover sc-eDWCr css-tbtf8t-MuiTypography-root-MuiLink-root"
                href="/register"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                Esqueci minha senha
              </a>
              <button
                className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv sc-csuSiG fzJIXo iqjFsB css-105755-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                disabled={false}
                id=":r7:"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="submit"
              >
                Entrar
                <span
                  className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </form>
        </div>
        <div
          className="sc-bqWxrE MuiBox-root css-1tqrsn5"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-5fhr9f-MuiTypography-root"
          >
            Ainda não tem uma conta? 
          </p>
          <a
            className=""
            href="/register"
            onClick={[Function]}
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1i4c8mu-MuiTypography-root"
            >
              Cadastre-se
            </p>
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-jSUZER LHjhY MuiBox-root css-12huqwv"
    >
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-be-small.svg"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter css-o16dbi-MuiTypography-root"
      >
        Super Monitoria©. 
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1cghntr-MuiTypography-root-MuiLink-root"
          href="https://mui.com/"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          Todos os Direitos Reservados
        </a>
         
        2022
        .
      </span>
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-bs-small.svg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Login screen snapshot tests should render screen with loading login 1`] = `
<div
  className="sc-bcXHqe MuiBox-root css-w3ze74"
>
  <div
    className="sc-gswNZR litGAJ MuiBox-root css-od2y5g"
  >
    <div
      className="sc-dkrFOg MuiBox-root css-uudpsy"
    >
      <img
        src="login-pattern-us.svg"
      />
      <img
        src="login-pattern-ue.svg"
      />
    </div>
    <div
      className="sc-eDvSVe MuiBox-root css-1vp8jwk"
    >
      <img
        alt="Super Monitoria"
        src="login-logo.svg"
      />
    </div>
    <div
      className="sc-hLBbgP MuiBox-root css-7dckhh"
    >
      <img
        src="login-pattern-bs.svg"
      />
      <img
        src="login-pattern-be.svg"
      />
    </div>
  </div>
  <div
    className="sc-ksBlkl mZXWo MuiBox-root css-od2y5g"
  >
    <div
      className="sc-hBxehG CkfHZ MuiBox-root css-150kay2"
    >
      <div
        className="sc-bjfHbI cVXfbz MuiBox-root css-0"
      >
        <img
          src="header-logo.svg"
        />
      </div>
      <div
        className="sc-fnGiBr MuiBox-root css-u4p24i"
      >
        <div
          className="sc-fEXmlR ktuAEL MuiBox-root css-1ay9vb9"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-h4jzzx-MuiTypography-root"
          >
            Não é cadastrado?
          </p>
        </div>
        <button
          className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv iLerhy css-18fs5t5-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
          disabled={false}
          id="login-register-button"
          onBlur={[Function]}
          onClick={[MockFunction]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Cadastre-se
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      className="sc-idXgbr MuiBox-root css-wkpw2c"
    >
      <div
        className="sc-pyfCe MuiBox-root css-1b6n4o1"
      >
        <div
          className="sc-jrcTuL MuiBox-root css-wkpw2c"
        >
          <h3
            className="MuiTypography-root MuiTypography-h3 ForwardRef(Typography)-root-1 css-ses0wv-MuiTypography-root"
          >
            Faça seu login
          </h3>
          <p
            className="MuiTypography-root MuiTypography-body1 ForwardRef(Typography)-root-2 css-h4jzzx-MuiTypography-root"
          >
            Insira suas credenciais abaixo para continuar
          </p>
          <form
            className="sc-kDvujY kpgBAx"
            id="login-form"
            onSubmit={[MockFunction]}
          >
            <div
              className="MuiBox-root css-8atqhb"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart sc-ftTHYK beuLgP css-1xv2y7e-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PersonIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-1o9s3wi-MuiInputBase-input-MuiOutlinedInput-input"
                  id="email"
                  name="email"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="E-mail IComp"
                  type="text"
                  value="email@icomp.ufam.edu.br"
                />
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="MuiBox-root css-8875ym"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd sc-ftTHYK beuLgP css-1l7of66-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="VpnKeyIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12.65 10C11.83 7.67 9.61 6 7 6c-3.31 0-6 2.69-6 6s2.69 6 6 6c2.61 0 4.83-1.67 5.65-4H17v4h4v-4h2v-4H12.65zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-152mnda-MuiInputBase-input-MuiOutlinedInput-input"
                  id="password"
                  name="password"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Senha"
                  type="password"
                  value="12345678"
                />
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1jew56n-MuiButtonBase-root-MuiIconButton-root"
                    disabled={false}
                    id="login-show-password-icon-button"
                    onBlur={[Function]}
                    onClick={[MockFunction]}
                    onContextMenu={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                      />
                    </svg>
                    <span
                      className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="sc-ipEyDJ kLWMPZ MuiBox-root css-mwwja"
            >
              <a
                className="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover sc-eDWCr css-tbtf8t-MuiTypography-root-MuiLink-root"
                href="/register"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                Esqueci minha senha
              </a>
              <button
                className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiLoadingButton-loading MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiLoadingButton-root MuiLoadingButton-loading MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv sc-csuSiG fzJIXo iqjFsB css-105755-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                disabled={true}
                id=":r3:"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={-1}
                type="submit"
              >
                <div
                  className="MuiLoadingButton-loadingIndicator MuiLoadingButton-loadingIndicatorCenter css-likury-MuiLoadingButton-loadingIndicator"
                >
                  <span
                    aria-labelledby=":r3:"
                    className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorInherit css-62e83j-MuiCircularProgress-root"
                    role="progressbar"
                    style={
                      {
                        "height": 16,
                        "width": 16,
                      }
                    }
                  >
                    <svg
                      className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                      viewBox="22 22 44 44"
                    >
                      <circle
                        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                        cx={44}
                        cy={44}
                        fill="none"
                        r={20.2}
                        strokeWidth={3.6}
                        style={{}}
                      />
                    </svg>
                  </span>
                </div>
                Entrar
              </button>
            </div>
          </form>
        </div>
        <div
          className="sc-bqWxrE MuiBox-root css-1tqrsn5"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-5fhr9f-MuiTypography-root"
          >
            Ainda não tem uma conta? 
          </p>
          <a
            className=""
            href="/register"
            onClick={[Function]}
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1i4c8mu-MuiTypography-root"
            >
              Cadastre-se
            </p>
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-jSUZER LHjhY MuiBox-root css-12huqwv"
    >
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-be-small.svg"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter css-o16dbi-MuiTypography-root"
      >
        Super Monitoria©. 
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1cghntr-MuiTypography-root-MuiLink-root"
          href="https://mui.com/"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          Todos os Direitos Reservados
        </a>
         
        2022
        .
      </span>
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-bs-small.svg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Login screen snapshot tests should render screen with password shown 1`] = `
<div
  className="sc-bcXHqe MuiBox-root css-w3ze74"
>
  <div
    className="sc-gswNZR litGAJ MuiBox-root css-od2y5g"
  >
    <div
      className="sc-dkrFOg MuiBox-root css-uudpsy"
    >
      <img
        src="login-pattern-us.svg"
      />
      <img
        src="login-pattern-ue.svg"
      />
    </div>
    <div
      className="sc-eDvSVe MuiBox-root css-1vp8jwk"
    >
      <img
        alt="Super Monitoria"
        src="login-logo.svg"
      />
    </div>
    <div
      className="sc-hLBbgP MuiBox-root css-7dckhh"
    >
      <img
        src="login-pattern-bs.svg"
      />
      <img
        src="login-pattern-be.svg"
      />
    </div>
  </div>
  <div
    className="sc-ksBlkl mZXWo MuiBox-root css-od2y5g"
  >
    <div
      className="sc-hBxehG CkfHZ MuiBox-root css-150kay2"
    >
      <div
        className="sc-bjfHbI cVXfbz MuiBox-root css-0"
      >
        <img
          src="header-logo.svg"
        />
      </div>
      <div
        className="sc-fnGiBr MuiBox-root css-u4p24i"
      >
        <div
          className="sc-fEXmlR ktuAEL MuiBox-root css-1ay9vb9"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-h4jzzx-MuiTypography-root"
          >
            Não é cadastrado?
          </p>
        </div>
        <button
          className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv iLerhy css-18fs5t5-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
          disabled={false}
          id="login-register-button"
          onBlur={[Function]}
          onClick={[MockFunction]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Cadastre-se
        </button>
      </div>
    </div>
    <div
      className="sc-idXgbr MuiBox-root css-wkpw2c"
    >
      <div
        className="sc-pyfCe MuiBox-root css-1b6n4o1"
      >
        <div
          className="sc-jrcTuL MuiBox-root css-wkpw2c"
        >
          <h3
            className="MuiTypography-root MuiTypography-h3 ForwardRef(Typography)-root-1 css-ses0wv-MuiTypography-root"
          >
            Faça seu login
          </h3>
          <p
            className="MuiTypography-root MuiTypography-body1 ForwardRef(Typography)-root-2 css-h4jzzx-MuiTypography-root"
          >
            Insira suas credenciais abaixo para continuar
          </p>
          <form
            className="sc-kDvujY kpgBAx"
            id="login-form"
            onSubmit={[MockFunction]}
          >
            <div
              className="MuiBox-root css-8atqhb"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart sc-ftTHYK beuLgP css-1xv2y7e-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PersonOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-1o9s3wi-MuiInputBase-input-MuiOutlinedInput-input"
                  id="email"
                  name="email"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="E-mail IComp"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="MuiBox-root css-8875ym"
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd sc-ftTHYK beuLgP css-1l7of66-MuiInputBase-root-MuiOutlinedInput-root"
                onClick={[Function]}
              >
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
                >
                  <span
                    className="notranslate"
                  >
                    ​
                  </span>
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="VpnKeyIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12.65 10C11.83 7.67 9.61 6 7 6c-3.31 0-6 2.69-6 6s2.69 6 6 6c2.61 0 4.83-1.67 5.65-4H17v4h4v-4h2v-4H12.65zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-152mnda-MuiInputBase-input-MuiOutlinedInput-input"
                  id="password"
                  name="password"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Senha"
                  type="text"
                  value="123456789"
                />
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1jew56n-MuiButtonBase-root-MuiIconButton-root"
                    disabled={false}
                    id="login-show-password-icon-button"
                    onBlur={[Function]}
                    onClick={[MockFunction]}
                    onContextMenu={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityOffIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                      />
                    </svg>
                  </button>
                </div>
                <fieldset
                  aria-hidden={true}
                  className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="css-ihdtdm"
                  >
                    <span
                      className="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              className="sc-ipEyDJ kLWMPZ MuiBox-root css-mwwja"
            >
              <a
                className="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover sc-eDWCr css-tbtf8t-MuiTypography-root-MuiLink-root"
                href="/register"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                Esqueci minha senha
              </a>
              <button
                className="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium sc-iBYQkv sc-csuSiG fzJIXo iqjFsB css-105755-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                disabled={false}
                id=":r9:"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="submit"
              >
                Entrar
              </button>
            </div>
          </form>
        </div>
        <div
          className="sc-bqWxrE MuiBox-root css-1tqrsn5"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-5fhr9f-MuiTypography-root"
          >
            Ainda não tem uma conta? 
          </p>
          <a
            className=""
            href="/register"
            onClick={[Function]}
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-1i4c8mu-MuiTypography-root"
            >
              Cadastre-se
            </p>
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-jSUZER LHjhY MuiBox-root css-12huqwv"
    >
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-be-small.svg"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter css-o16dbi-MuiTypography-root"
      >
        Super Monitoria©. 
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1cghntr-MuiTypography-root-MuiLink-root"
          href="https://mui.com/"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          Todos os Direitos Reservados
        </a>
         
        2022
        .
      </span>
      <div
        className="sc-gKPRtg bunlpi MuiBox-root css-1nylpq2"
      >
        <img
          src="login-pattern-bs-small.svg"
        />
      </div>
    </div>
  </div>
</div>
`;
